Fixed involve page formatting on smaller screens (iphone 5

--- a/sources/css/involve.css
+++ b/sources/css/involve.css
@@ -165,6 +165,13 @@
     overflow: auto;
 }
 
+#rightcontainer {
+    width: 100%;
+    height: 87%;
+    font-size: 90%;
+    overflow: auto;
+}
+
 .leftcard div {
     display: absolute;
     
@@ -299,6 +306,21 @@ and (max-width: 980px) {
 }
 
 #closebtn:hover {background: #bbb;}
+
+@media only screen 
+and (max-width: 480px) {
+    #leftcaption {
+        font-size: 30%;
+    }
+    .leftparagraph {
+        font-size: 17%;
+    }
+    .rightparagraph {
+        font-size: 17%;
+    }
+            
+    
+}
 
 
 
